# caresma-back

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  dependencies.py  main.py
app/api/v1/: __init__.py  assessments.py  auth.py  heygen.py  sessions.py  users.py  websocket.py
app/api/v1/routers/: messages.py
app/core/: __init__.py  config.py  encryption.py  events.py  logging.py  security.py  users.py
app/db/: __init__.py  base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 06b212308517_add_encryption_version_to_messages.py  348179efeeeb_add_messages_table.py  d2df79d1bf83_make_session_id_optional_in_assessments.py  fa81e7102909_add_assessments_table_for_cognitive_.py
app/models/: __init__.py  assessment.py  message.py  session.py  user.py
app/repositories/: __init__.py  session_repository.py
app/schemas/: __init__.py  assessment.py  session.py  user.py
app/services/: Messages.py  Messages.py.bak  __init__.py  assessment_service.py  heygen_livekit_service.py  heygen_service.py  message_service.py  openai_service.py  session_service.py
app/utils/: __init__.py  pagination.py  rate_limiting.py
app/workers/tasks/: __init__.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md
scripts/: cleanup_heygen_sessions.py
tests/: conftest.py
